<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="crowdin_comment_break_strings_1" translatable="false">Crowdin comment break</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="ok_button">OK</string>
  <string name="cancel_button">Cancel</string>
  <string name="go_button">Go</string>
  <string name="dismiss_button">Dismiss</string>
  <string name="open_drawer">Open</string>
  <string name="close_drawer">Close</string>
  <string name="do_not_remind">Don\'t Remind</string>
  <string name="_continue">Continue?</string>
  <string name="warning">Warning</string>
  <string name="help_button">Help</string>
  <plurals name="apps_count">
    <item quantity="one">%d app</item>
    <item quantity="other">%d apps</item>
  </plurals>
  <plurals name="perm_count">
    <item quantity="one">%d permission</item>
    <item quantity="other">%d permissions</item>
  </plurals>
  <plurals name="ref_count">
    <item quantity="one">%d reference</item>
    <item quantity="other">%d references</item>
  </plurals>
  <string name="copied_to_clipboard_toast">Copied to clipboard</string>
  <string name="crowdin_comment_break_strings_2" translatable="false">Crowdin comment break</string>
  <string name="search_menu_item">Search</string>
  <string name="settings_menu_item">Settings</string>
  <string name="filter_menu_item">Exclusion Filters</string>
  <string name="root_menu_item">Root Access</string>
  <string name="adb_menu_item">ADB Access</string>
  <string name="backup_restore_menu_item">Backup / Restore</string>
  <string name="help_menu_item">Help</string>
  <string name="donate_menu_item">Donate</string>
  <string name="license_menu_item">License</string>
  <string name="about_menu_item">About</string>
  <string name="advanced_settings_menu_item">Advanced Settings</string>
  <string name="crowdin_comment_break_strings_3" translatable="false">Crowdin comment break</string>
  <string name="primary_account">Primary Account</string>
  <string name="primary_profile_only">Permission Manager X can run only in primary user account / device owner profile.</string>
  <string name="grant_root_or_adb">Root or ADB access is required to get AppOp permissions and to change permissions state.</string>
  <string name="backup">Backup</string>
  <string name="restore">Restore</string>
  <string name="choose_backup_restore">Backup or restore preferences and permission references.</string>
  <string name="select_backup_file">Select backup file</string>
  <string name="backup_in_progress">Backing up…</string>
  <string name="restore_in_progress">Restoring …</string>
  <plurals name="backup_restore_processed_prefs">
    <item quantity="one">Processed %1$d preference</item>
    <item quantity="other">Processed %1$d preferences</item>
  </plurals>
  <plurals name="backup_restore_processed_profiles">
    <item quantity="one">%1$s, %2$d permission profile</item>
    <item quantity="other">%1$s, %2$d permission profiles</item>
  </plurals>
  <plurals name="backup_restore_processed_refs">
    <item quantity="one">%1$s, and %2$d permission reference.</item>
    <item quantity="other">%1$s, and %2$d permission references.</item>
  </plurals>
  <plurals name="backup_restore_invalid_prefs">
    <item quantity="one">%1$s\nSkipped %2$d invalid preference.</item>
    <item quantity="other">%1$s\nSkipped %2$d invalid preferences.</item>
  </plurals>
  <plurals name="backup_restore_uninstalled_apps">
    <item quantity="one">%1$s\nSkipped %2$d uninstalled app.</item>
    <item quantity="other">%1$s\nSkipped %2$d uninstalled apps.</item>
  </plurals>
  <string name="backup_restore_failed">Failed. Some error occurred.</string>
  <string name="skip_uninstalled_packages">Skip uninstalled packages</string>
  <string name="swap_user_ids">Swap user IDs</string>
  <string name="replace_user_id_from_hint">Replace</string>
  <string name="replace_user_id_with">with</string>
  <string name="replace_user_id_to_hint">this</string>
  <string name="disable_pkg_warning" comment="'system' or 'framework'">Disabling a %1$s app is a dangerous action. In worst-case scenario Android system may crash.\nAre you sure you want to continue?</string>
  <string name="pkg_state_disabled2" searchStr="true">%s, Disabled</string>
  <string name="unsupported_sdk_warning_title">Android version unsupported</string>
  <string name="unsupported_sdk_warning_message">Your device is running Android %s which has not been tested so far. PMX may crash or may behave in unexpected way.</string>
  <string name="unsupported_sdk_warning_button">I Understand</string>
  <string name="crowdin_comment_break_strings_4" translatable="false">Crowdin comment break</string>
  <string name="crash_report">Crash Report</string>
  <string name="ask_to_report_crash_small">Send crash report to the developer</string>
  <string name="ask_to_report_crash">Sorry, a component of the app had a problem and crashed. Send the log file to the developer so that the bug can be fixed.</string>
  <string name="send_report">Send Report</string>
  <string name="crash_log_file_not_exists_toast">Crash logs do not exist</string>
  <string name="crash_log_file_read_failed_toast">Failed to read crash log file</string>
  <string name="submit_report_button">Submit Report</string>
  <string name="submitting_report_button">Submitting…</string>
  <string name="send_email_button">Send Email</string>
  <string name="send_crash_report_email_desc">* You can send email if submitting not works.</string>
  <string name="reading_crash_log_file">Reading crash log file…</string>
  <string name="submit_crash_report_failed_toast">Failed to submit crash report</string>
  <string name="delete_crash_report_file_title">Delete file</string>
  <string name="crash_file_delete_confirmation">If the crash report is sent, delete the old file on device?</string>
  <string name="crowdin_comment_break_strings_5" translatable="false">Crowdin comment break</string>
  <string name="prog_msg_checking_privs">Checking privileges…</string>
  <string name="prog_msg_stopping_daemon">Stopping daemon…</string>
  <string name="prog_msg_connecting_to_daemon">Connecting to daemon…</string>
  <string name="prog_msg_checking_root_access">Checking root access…</string>
  <string name="prog_msg_checking_adb_access">Checking ADB access…</string>
  <string name="prog_msg_starting_daemon">Starting daemon…</string>
  <string name="creating_packages_list">Creating apps list…</string>
  <string name="sorting_packages_list">Sorting apps list…</string>
  <string name="reading_reference_perms">Reading references…</string>
  <string name="creating_app_ops_lists">Preparing AppOps data…</string>
  <string name="crowdin_comment_break_strings_6" translatable="false">Crowdin comment break</string>
  <string name="daemon_dex_location_tmp">Temporary directory</string>
  <string name="daemon_dex_location_external">External storage</string>
  <string name="daemon_dex_location_tmp_val" translatable="false">data_local_tmp</string>
  <string name="daemon_dex_location_external_val" translatable="false">ext_storage</string>
  <string name="daemon_uid_system">System</string>
  <string name="daemon_uid_root">Root</string>
  <string name="daemon_uid_adb">ADB</string>
  <string name="daemon_uid_system_val" translatable="false">1000</string>
  <string name="daemon_uid_root_val" translatable="false">0</string>
  <string name="daemon_uid_adb_val" translatable="false">2000</string>
  <string name="daemon_context_shell">Shell</string>
  <string name="daemon_context_default">Default</string>
  <string name="daemon_context_shell_val" translatable="false">u:r:shell:s0</string>
  <string name="daemon_context_default_val" translatable="false" />
  <string name="su_exe_path_hint" translatable="false">$PATH</string>
  <string name="bad_path_toast">Bad path</string>
  <string name="reset_perm_db_dialog_title">Reset / Cleanup References</string>
  <string name="reset_perm_db_dialog_detail"><![CDATA[Reset removes all permission references.<br />Cleanup removes all permission references excluding the currently visible list of apps and permissions.<br />To prevent any unexpected loss, a backup file will be created before doing reset / cleanup.]]></string>
  <string name="reset_perm_db_dialog_reset_button">Reset</string>
  <string name="reset_perm_db_dialog_cleanup_button">Cleanup</string>
  <string name="reset_perm_db_backup_failed_toast">Backup failed</string>
  <string name="reset_perm_db_building_app_list">Building apps list…</string>
  <string name="reset_perm_db_pkg_list_failed_toast">Building app list failed</string>
  <string name="reset_perm_db_optimizing_perm_db">Optimizing permission references…</string>
  <plurals name="reset_perm_db_removed_count_toast">
    <item quantity="one">Removed %d entry from database</item>
    <item quantity="other">Removed %d entries from database</item>
  </plurals>
  <string name="crowdin_comment_break_strings_7" translatable="false">Crowdin comment break</string>
  <string name="privileges_title">Privileges</string>
  <string name="root_granted_toast">Root granted</string>
  <string name="getting_root_failed">Getting root privileges failed. Are you rooted?</string>
  <string name="daemon_failed_toast">Starting privileged daemon failed</string>
  <string name="no_app_ops_without_daemon_toast">Cannot read AppOps without root / ADB</string>
  <string name="adb_title">ADB</string>
  <string name="adb_pairing_failed_toast">Pairing failed</string>
  <string name="adb_connect_failed_toast">Connection failed</string>
  <string name="connected_to_adb_toast">Connected to ADB</string>
  <string name="pair_button">Pair</string>
  <string name="pairing_button">Pairing</string>
  <string name="connect_button">Connect</string>
  <string name="connecting_button">Connecting</string>
  <string name="connection_title">Connection</string>
  <string name="pairing_code_hint">Pairing code</string>
  <string name="ip_address_hint">IP address</string>
  <string name="socket_port_hint">Port</string>
  <string name="required_field_error">Required</string>
  <string name="invalid_field_error">Invalid</string>
  <string name="adb_pair_help_msg"><![CDATA[<ul><li>Turn on <b><i>Wireless Debugging</i></b> and enable Split-Screen mode.</li><li>Enter pairing code and port, and tap pair button.</li><li>After successful pairing, proceed to connection.</li></ul>]]></string>
  <string name="adb_connect_help_11_msg"><![CDATA[<ul><li>Enable <b><i>Wireless Debugging</i></b> (pairing) or <b><i>ADB Over Network</i></b>.</li><li>Enter port and tap connect button.</li><li>Allow ADB authentication when prompted.</li></ul>]]></string>
  <string name="adb_connect_help_after_pair_msg">Pairing successful. Enter port and tap connect button.</string>
  <string name="adb_connect_help_msg"><![CDATA[<ul><li>Enable <b><i>ADB Over Network</i></b>.</li><li>Enter port and tap connect button.</li><li>Allow ADB authentication when prompted.</li></ul>]]></string>
  <string name="crowdin_comment_break_strings_8" translatable="false">Crowdin comment break</string>
  <string name="love_using_app">Liking Permission Manager X?</string>
  <string name="reset_app_ops">Reset AppOps</string>
  <string name="clear_references">Clear References</string>
  <string name="set_references">Set References</string>
  <string name="exclude_app_from_visible_list">Hide app from list</string>
  <string name="open_pkg_info">Open app info</string>
  <string name="find_pkg_process">Find app process</string>
  <string name="filter_settings_reset_defaults_menu_item">Reset To Defaults</string>
  <string name="filter_settings_clear_excluded_apps_menu_item">Clear Excluded Apps</string>
  <string name="filter_settings_clear_excluded_perms_menu_item">Clear Excluded Perms</string>
  <string name="filter_settings_clear_extra_app_ops_menu_item">Clear Extra AppOps</string>
</resources>