<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/action_search"
    android:icon="@android:drawable/ic_menu_search"
    android:orderInCategory="1"
    android:title="@string/search_menu_item"
    app:actionViewClass="com.mirfatif.permissionmanagerx.ui.base.MySearchView"
    app:showAsAction="ifRoom" />

  <group android:id="@+id/group1">
    <item
      android:id="@+id/action_reset_app_ops"
      android:orderInCategory="4"
      android:title="@string/reset_app_ops"
      app:showAsAction="never" />
  </group>

  <group android:id="@+id/group2">
    <item
      android:id="@+id/action_set_all_references"
      android:orderInCategory="5"
      android:title="@string/set_references"
      app:showAsAction="never" />

    <item
      android:id="@+id/action_clear_references"
      android:orderInCategory="6"
      android:title="@string/clear_references"
      app:showAsAction="never" />
  </group>
</menu>
