<?xml version="1.0" encoding="utf-8"?>
<com.mirfatif.permissionmanagerx.ui.base.MyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="8dp"
  android:orientation="vertical">

  <View
    android:layout_width="20dp"
    android:layout_height="6dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/hinge" />

  <com.mirfatif.permissionmanagerx.ui.base.MyLinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:orientation="vertical">

    <Button
      android:id="@+id/exclude_pkg"
      style="@style/Widget.AppCompat.Button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/button_bg"
      android:text="@string/exclude_app_from_visible_list"
      android:textColor="?attr/accentColor"
      android:visibility="gone" />

    <Button
      android:id="@+id/disable_pkg"
      style="@style/Widget.AppCompat.Button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/button_bg"
      android:textColor="?attr/accentColor"
      android:visibility="gone" />

    <Button
      android:id="@+id/open_pkg_info"
      style="@style/Widget.AppCompat.Button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/button_bg"
      android:text="@string/open_pkg_info"
      android:textColor="?attr/accentColor" />

    <Button
      android:id="@+id/find_pkg_proc"
      style="@style/Widget.AppCompat.Button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/button_bg"
      android:text="@string/find_pkg_process"
      android:textColor="?attr/accentColor" />

  </com.mirfatif.permissionmanagerx.ui.base.MyLinearLayout>
</com.mirfatif.permissionmanagerx.ui.base.MyLinearLayout>
